jamMigrationZips/modresorts/test/deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Wed Apr 17 13:27:38 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresorts
  template:
    metadata:
      labels:
        app: modresorts
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: modresorts
          ports:
            - containerPort: 9080
              protocol: TCP
