jamMigrationZips/modresorts/test/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Wed Apr 17 13:27:38 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts
    weight: 100
