jamMigrationZips/modresorts/test/deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Wed Apr 17 13:27:38 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresorts
